<resources>
    <string name="app_name">Mobile Guard</string>
    <string name="failed_to_connect_internet">Failed to connect server</string>
    <string name="update_tips">Update Tips</string>
    <string name="update_description">Find a new version, whether update the app? New version content: \n</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="failed_to_download">Failed to download</string>
    <string name="success_to_download">Success to download and be install right now...</string>
    <string name="failed_to_install_new_version">Failed to install new version:file can not be found</string>
    <string name="json_parse_error">Json parse error</string>
    <string name="download_tips">Downloading..</string>
    <string name="download">Download</string>
    <string name="phone_security">Phone Security</string>
    <string name="msg_safe">Message Safe</string>
    <string name="software_manager">App Manager</string>
    <string name="process_manager">Process Manager</string>
    <string name="traffic_stats">Traffic Stats</string>
    <string name="anti_virus">Anti-virus</string>
    <string name="clean_cache">Clean Cache</string>
    <string name="advanced_tools">Advanced Tools</string>
    <string name="setting">Setting</string>
    <string name="title_setting_password">Please setting password</string>
    <string name="please_input_password">Please input password</string>
    <string name="please_input_password_again">Please input password again</string>
    <string name="ok">Ok</string>
    <string name="password_can_not_be_empty">Password can not be empty</string>
    <string name="two_password_is_not_consistent">Two password is not consistent</string>
    <string name="title_input_password">Please input password</string>
    <string name="password_is_not_true">Password is not true</string>
    <string name="please_input_safe_phone_number">Please input safe phone number</string>
    <string name="_11_phone_number">11 Phone Number</string>
    <string name="setting_finish">Setting Finish</string>
    <string name="safe_phone_can_not_be_empty">Safe phone can not be empty</string>
    <string name="phone_safe_service">Phone safe service</string>
    <string name="bind_sim">Bind SIM</string>
    <string name="bind_sim_summary">It will send a message to Safe Phone when use other SIM card if this service is on.</string>
    <string name="change_safe_phone_number">Change safe phone number</string>
    <string name="current_safe_phone_number">Current safe phone number:</string>
    <string name="select_from_contact">Select from contact</string>
    <string name="contacts_activity_title">Contacts</string>
    <string name="tips">Tips</string>
    <string name="loding_tips">Loding data...</string>
    <string name="title_phone_safe_setting1">Setting safe phone number</string>
    <string name="gps_trace">Gps Trace</string>
    <string name="summary_gps_trace">It will send the GPS info to Safe Phone Number if this service is on when receive a message which content equals to #*gps*#</string>
    <string name="remote_lock_screen">Remote lock screen</string>
    <string name="summary_remote_lock_screen">It will lock screen with password 123456 if this service is on when receive a message which content equals to #*lock screen*#123456</string>
    <string name="remote_wipe_data">Remote wipe data</string>
    <string name="summary_remote_wipe_data">It will wipe data in sd card to preventing info from leaking if this service is on when receive a message which content equals to #*wipe data*#</string>
    <string name="music_alarm">Alarm</string>
    <string name="summary_music_alarm">It will play alarm sound if this service is on when receive a message which content equals #*alarm*#</string>
    <string name="tips_sim_changed">Warm:SIM card has changed! The new SIM is the sender.</string>
    <string name="activity_device_admin">Device admin activity</string>
    <string name="device_admin">Mobile Guard</string>
    <string name="device_admin_description">Remote lock screen and wipe data service</string>
    <string name="add_admin_extra_app_text">You can use Remote Lock Screen and wipe data service if activate this permission</string>
    <string name="pref_device_admin">Activate Device Admin</string>
    <string name="summary_device_admin">You can not uninstall app if this service is on. While the following service need this service. You can uninstall when this service is off.</string>
    <string name="auto_update">Auto update</string>
    <string name="summary_auto_update">It will auto check update when start this app if this service is on.</string>
    <string name="manually_add">Manually add</string>
    <string name="add_from_contacts">Add from contacts</string>
    <string name="add_from_phone_history">Add from phone history</string>
    <string name="add_from_sms_history">Add from sms history</string>
    <string name="hint_manually_add_phone_number">Please input phone number which need intercept</string>
    <string name="call_intercept">Call intercept</string>
    <string name="sms_intercept">Sms intercept</string>
    <string name="phone_number_can_not_be_empty">Phone number can not be empty</string>
    <string name="tips_intercept_is_not_selected">It has not take effect. Because you have not select any intercept options</string>
    <string name="text_msg_safe_no_data">No data.\n Please press the menu in right top.</string>
    <string name="no_more_data">No more data</string>
    <string name="whether_delete_phone_number">Whether to delete phone number</string>
    <string name="success_to_delete">Success to delete</string>
    <string name="failed_to_delete">Failed to delete</string>
    <string name="failed_to_add">Failed to add</string>
    <string name="success_to_add">Success to add</string>
    <string name="unknown">Unknown</string>
    <string name="title_blacklist_intercept">Blacklist intercept</string>
    <string name="summary_blacklist_intercept">You will not receive call or sms from the phone number which in blacklist if this service is on</string>
    <string name="phone_location_query">Query phone location</string>
    <string name="summary_phone_location_query">Support cellphone and telephone number</string>
    <string name="hint_please_input_phone_number">Please input phone number</string>
    <string name="query">Query</string>
    <string name="tips_failed_to_query_phone_location">Failed to query phone location. Please ensure phone is right.</string>
    <string name="title_show_incoming_location">Show incoming number location</string>
    <string name="summary_show_incoming_location">It will show location when incoming call if this service is on</string>
    <string name="contacts_sms_backup">Backup contacts sms</string>
    <string name="summary_contacts_sms_backup">You can backup contacts or sms along</string>
    <string name="backup_contacts">Backup contacts</string>
    <string name="backup_sms">Backup sms</string>
    <string name="message_backup">Please select the content needed backup</string>
    <string name="tips_sdcard_not_found">Sdcard not found</string>
    <string name="tips_no_data_to_backup">No Data found to be backed up!</string>
    <string name="file_not_found">File not found</string>
    <string name="tips_no_data_to_restore">No data to restore</string>
    <string name="failed_to_restore">Failed to restore</string>
    <string name="contacts_sms_restore">Restore contacts sms</string>
    <string name="summary_contacts_sms_restore">You can restore contacts or sms along</string>
    <string name="title_on_restore">Please select the type</string>
    <string name="title_restore_activity">Please select a file to restore</string>
    <string name="contacts">Contacts</string>
    <string name="sms">Sms</string>
    <string name="failed_to_save_file">Failed to save file</string>
    <string name="success_to_restore">Success to restore</string>
    <string name="success_to_backup">Success to backup</string>
    <string name="failed_to_backup">Failed to backup</string>
    <string name="delete">Delete</string>
    <string name="rom_free_space">ROM free space:</string>
    <string name="sd_card_free_space">SD card free space:</string>
    <string name="user_app">User App</string>
    <string name="system_app">System App</string>
    <string name="uninstall">Uninstall</string>
    <string name="select_all">Select All</string>
    <string name="cancel_all">Cancel all</string>
    <string name="message_uninstall_app">Are you sure uninstall selected apps?</string>
    <string name="total_memory">Total Memory:</string>
    <string name="free_memory">Free Memory:</string>
    <string name="kill_process">Kill process</string>
    <string name="message_kill_process">Are you sure kill selected processes?</string>
    <string name="tips_kill_process">Killing %1$d processes and releasing %2$s memory</string>
    <string name="app_lock">App Lock</string>
    <string name="summary_app_lock">You need input password before running app if the app is locked</string>
    <string name="unlocked">Unlocked</string>
    <string name="locked">Locked</string>
    <string name="reset_password">Reset Password</string>
    <string name="total_traffic_stats_sum">Total traffic stats(%1$s)</string>
    <string name="traffic_stats_upload_download">↑%1$s ↓%2$s</string>
    <string name="mobile_traffic_stats_sum">Mobile traffic stats(%1$s)</string>
    <string name="no_virus">Scan completed, no virus was found</string>
    <string name="found_virus">%1$d viruses were found</string>
    <string name="clear_right_now">Clear right now</string>
    <string name="no_cache_data">No cache data</string>
    <string name="tips_clear_cache_completed">Clear completed. It has free %1$s Storage</string>
    <string name="tips_failed_to_clear">Failed to clear</string>
    <string name="no_permission">No Permission</string>
    <string name="title_location">Get Location</string>
    <string name="message_location">The GPS Location service in Phone Safe need permission</string>
    <string name="explanation_message">The App will crash if permission Declined</string>
    <string name="title_storage">Read And Write Storage</string>
    <string name="message_storage">We need this permission to read and write data when download file / backup or restore contacts and sms</string>
    <string name="title_contacts">Read And Write Contacts</string>
    <string name="message_contacts">We need this permission to backup and restore contacts</string>
    <string name="title_system_alert_window">System Alert Window</string>
    <string name="message_system_alert_window">We need this permission to show location when receive a call</string>
    <string name="tips_thank_you_for_your_use">Thank you for your use</string>
    <string name="title_sms">Read/Write/Send SMS</string>
    <string name="message_sms">We need this permission to backup and restore sms and send phone location to safe phone number</string>
    <string name="title_phone">Phone Permission</string>
    <string name="message_phone">We need this permission to read call log or intercept call</string>
    <string name="tips_system_version_check">We find your system version is:</string>
    <string name="tips_msg_safe_recommend_use_system_service">. We recommended you to use the blacklist service in Contacts and Sms</string>
    <string name="tips_restore_recommend_to_use_system_service">. We recommended you to use the restore service in Sms</string>
    <string name="tips_clear_cache_recommend_use_system_service">. We recommended you to use the system clear cache service.</string>
</resources>
