<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_phone_number"
        android:hint="@string/hint_manually_add_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"/>

    <CheckBox
        android:id="@+id/cb_call_intercept"
        android:text="@string/call_intercept"
        android:checked="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/cb_sms_intercept"
        android:text="@string/sms_intercept"
        android:checked="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>