<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.ittianyu.mobileguard.activity.PhoneSafeSettingPasswordActivity">

    <EditText
        android:id="@+id/et_password"
        android:hint="@string/please_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/et_repassword"
        android:hint="@string/please_input_password_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btn_ok"
        android:text="@string/ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
